fixed(reduced hero size, increased caruouel size so captions are all visible across all viewports.

--- a/app/components/featured/featured.component.css
+++ b/app/components/featured/featured.component.css
@@ -1,6 +1,7 @@
+
 .carousel {
   width: 100%;
-  height: 400px;
+  height: 575px;
   padding-top: 50px;
 }
 .carousel-item {
@@ -16,6 +17,7 @@
   border-right: 3px solid #FD7014;
   border-left: 3px solid #FD7014;
   cursor: pointer;
+  box-shadow: 7px 16px 20px black;
 }
 
 .caption {
